syntax = "proto2";
package main;

message IntPair {
  optional int32 old_value = 1;
  optional int32 new_value = 2;
}
message OrderStatusChange
{
  optional int64 order_id = 1;
  optional int32 user_id = 2;
  optional int32 shop_id = 3;
  optional bool is_group_buy = 4;
  optional IntPair status_change = 5;
  repeated ExtraData extras = 6; // this are the list of fields which sometime needs to expose some more info to client to act on the order change
}
message ExtraData {
  optional string field_name = 1;
  optional string old_value = 2;
  optional string new_value = 3;
}